# bmls

./: .gitignore  Cargo.toml  README.md
benches/: avg_pool.rs  im2col.rs  lrn.rs  reduce_mean.rs  reduce_sum.rs  sigmoid.rs
docs/: bmls.aux  bmls.blg  bmls.fdb_latexmk  bmls.fls  bmls.out  bmls.tex  bmls.toc  old.tex
src/: adam.rs  add.rs  avg_pool.rs  axis_add.rs  axis_div.rs  axis_mul.rs  axis_sub.rs  col2im.rs  cross_entropy.rs  div.rs  dropout.rs  error.rs  im2col.rs  leaky_relu.rs  lib.rs  lrn.rs  mae.rs  matmul.rs  max_pool.rs  momentum.rs  mse.rs  mul.rs  pad.rs  ptr.rs  reduce_mean.rs  reduce_sum.rs  relu.rs  rms_prop.rs  selu.rs  sgd.rs  sigmoid.rs  softmax.rs  sub.rs  tanh.rs
