[package]
name = "bmls"
version = "1.0.0"
edition = "2021"
authors = ["Rylan Yancey"]
description = "Basic Machine Learning Subsystems"
documentation = "https://github.com/RylanYancey/bmls/tree/main/docs"
readme = "README.md"
repository = "https://github.com/RylanYancey/bmls"
license = "MIT or Apache-2.0"
keywords = ["ml", "math", "algorithms", "statistics", "machine-learning"]
categories = ["algorithms", "mathematics"]

[dependencies]
fastrand = "2.0.1"
itertools = "0.11.0"
matrixmultiply = "0.3.8"
rayon = "1.8.0"
thiserror = "1.0.50"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }